--- a/template.html
+++ b/template.html
@@ -121,7 +121,7 @@
               <div class="col-lg-4 mb-5 col-md-6">
                 <div class="wine_v_1 text-center pb-4 pt-5">
                   <img src="images/{{wine.Картинка}}" alt="Image" class="img-fluid">
-                  {% if wine.Название == "Белая леди" %}
+                  {% if wine.Акция %}
                     <img src="assets/profitable.png" style="width:10rem;height: 10rem;position:absolute;right: -20px;top: -20px;">
                   {% endif %}
                   <div>
